Fixed preloading so it doesn't break the retry match button. Also made minor layout tweaks.

--- a/www/urf.css
+++ b/www/urf.css
@@ -1,5 +1,4 @@
 ﻿body {
-    /*background: black;*/
     color: #ccc;
     text-align: center;
     margin: 0;
@@ -34,8 +33,8 @@ input[type=text] {
     padding: 25px;
     text-align: left;
     background: #000;
-    /*border: #666 1px solid;*/
 }
+
 .left-side-col {
     -webkit-border-top-left-radius: 15px;
     -webkit-border-bottom-left-radius: 15px;
@@ -49,8 +48,8 @@ input[type=text] {
     float: left;
     padding-top: 20px;
     background: #000;
-    /*border-bottom: #666 1px solid;*/
 }
+
 .right-side-col {
     -webkit-border-top-right-radius: 15px;
     -webkit-border-bottom-right-radius: 15px;
@@ -60,13 +59,16 @@ input[type=text] {
     border-bottom-right-radius: 15px;
 }
 
+.controls {
+    line-height: 1.5;
+}
+
 .ability-icon {
     border: #999999 1px solid;
 }
 
 #canvas {
     background: #101010;
-    /*border-top: #666 1px solid;*/
 }
 
 #health-bar-container {
